[project]
name = "contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "pyhamtools>=0.12.0",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "scipy>=1.16.2",
    "unidecode>=1.4.0",
    "xlrd>=2.0.2",
]
